--- a/MvcMovie/MvcMovie.csproj
+++ b/MvcMovie/MvcMovie.csproj
@@ -165,6 +165,19 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201605101722438_InitialCreate.cs" />
+    <Compile Include="Migrations\201605101722438_InitialCreate.Designer.cs">
+      <DependentUpon>201605101722438_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201605101736271_Initial.cs" />
+    <Compile Include="Migrations\201605101736271_Initial.Designer.cs">
+      <DependentUpon>201605101736271_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201605101750536_Rating.cs" />
+    <Compile Include="Migrations\201605101750536_Rating.Designer.cs">
+      <DependentUpon>201605101750536_Rating.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -246,6 +259,17 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201605101722438_InitialCreate.resx">
+      <DependentUpon>201605101722438_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201605101736271_Initial.resx">
+      <DependentUpon>201605101736271_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201605101750536_Rating.resx">
+      <DependentUpon>201605101750536_Rating.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
