--- a/MvcMovie/MvcMovie.csproj
+++ b/MvcMovie/MvcMovie.csproj
@@ -177,6 +177,10 @@
     <Compile Include="Migrations\201605101750536_Rating.Designer.cs">
       <DependentUpon>201605101750536_Rating.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201605101827476_DataAnnotations.cs" />
+    <Compile Include="Migrations\201605101827476_DataAnnotations.Designer.cs">
+      <DependentUpon>201605101827476_DataAnnotations.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -269,6 +273,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201605101750536_Rating.resx">
       <DependentUpon>201605101750536_Rating.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201605101827476_DataAnnotations.resx">
+      <DependentUpon>201605101827476_DataAnnotations.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
